force-app/main/default/objects/DureeGarantiesOptions__c/DureeGarantiesOptions__c.object-meta.xml
<CustomObject>
    <description>Objet pour les durées des différentes garantie des options</description>
    <label>Durée des garanties options</label>
    <nameField>
        <displayFormat>DGO/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Durées des garanties options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>