force-app/main/default/objects/DureeGarantiesOptions__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>