force-app/main/default/objects/DureeGarantiesOptions__c/fields/codeGarantie__c.field-meta.xml
<CustomField>
    <fullName>codeGarantie__c</fullName>
    <label>Code Garantie</label>
    <referenceTo>Garantie__c</referenceTo>
    <relationshipLabel>Durées des garanties options</relationshipLabel>
    <relationshipName>DureeGarantiesOptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>