force-app/main/default/objects/DureeGarantiesOptions__c/fields/codeOption__c.field-meta.xml
<CustomField>
    <fullName>codeOption__c</fullName>
    <label>Code Option</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Durées des garanties options</relationshipLabel>
    <relationshipName>DureeGarantieOption</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>